fix/css prevent show menu-collapsed in mobile version with important

--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ input[type=text],input[type=email],textarea {
     }
     
     .display-none {
-        display: none;
+        display: none !important;
     }
 
     /* LA VISTA MOVIL */
